--- a/StudyNotion/Server/package.json
+++ b/StudyNotion/Server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.4",
     "otp-generator": "^4.0.1",
     "razorpay": "^2.9.2"
   }
